# zephyr-out-of-tree-driver-st7789

./: CMakeLists.txt  Kconfig  README.md  nrf52840_mdk.overlay  prj.conf  setup.sh
drivers/zephyr/: Kconfig
drivers/zephyr/display/: CMakeLists.txt  Kconfig
drivers/zephyr/display/st7789v_no_cs/: CMakeLists.txt  Kconfig  display_st7789v_no_cs.c
dts/bindings/display/: sitronix,st7789v-no-cs.yaml
src/: main.c
